This dialog can be opened from the recipient key input fields in the sign/encrypt wizard. The tab order is wrong and empty cells in the certificate table lack an accessible text.
Description
Description
Revisions and Commits
Revisions and Commits
rLIBKLEO Libkleo | |||
rLIBKLEOcba503affb7c More accessible text representations for not applicable model entries | |||
rKLEOPATRA Kleopatra | |||
rKLEOPATRA175ba9b74ecb Give default tab of certificate list a non-empty title | |||
rKLEOPATRAb2ef95720196 Do not crash if certificate selection dialog is opened a second time | |||
rKLEOPATRA52f4d78fd5b9 Ensure correct tab order of the subwidgets of the tab widget | |||
rKLEOPATRA6f6d1e54933d Fix wrong text if multi selection is allowed | |||
rKLEOPATRA12514b87b064 Improve accessible names of dialog buttons |
Status | Assigned | Task | ||
---|---|---|---|---|
Open | ikloecker | T5824 Kleopatra: Full accessibility support | ||
Resolved | ikloecker | T5876 Kleopatra: Make certificate selection dialog accessible |