Fix wrong text if multi selection is allowed

We need to update the text when the options are changed.

GnuPG-bug-id: 5876